k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gaming-yoti

spec:
  replicas: 2

  selector:
    matchLabels:
      app: gaming-yoti

  template:
    metadata:
      labels:
        app: gaming-yoti

    spec:
      containers:
        - name: gaming-yoti

          image: vdeshpa1/gaming-yoti:1.0
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
