k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: gaming-yoti

spec:

  selector:
    app: gaming-yoti

  ports:

    - port: 80
      targetPort: 8080

  type: LoadBalancer
