k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: gaming-yoti-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: gaming-yoti.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaming-yoti
                port:
                  number: 80
